--- a/WaFI/Base.lproj/Main.storyboard
+++ b/WaFI/Base.lproj/Main.storyboard
@@ -299,7 +299,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="P82-at-p7p" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1847" y="-785"/>
+            <point key="canvasLocation" x="1297" y="-686"/>
         </scene>
         <!--Sign Up View Controller-->
         <scene sceneID="Piz-7a-tjT">
@@ -385,7 +385,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cyD-BG-NuC" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1082" y="-785"/>
+            <point key="canvasLocation" x="465" y="-687"/>
         </scene>
         <!--Reset Password View Controller-->
         <scene sceneID="Mdb-tG-dFT">
@@ -461,7 +461,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="n8c-8F-g8X" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-359" y="-784"/>
+            <point key="canvasLocation" x="-407" y="-687"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="d6q-Ud-qn9">
@@ -484,59 +484,80 @@
         <!--Your Events-->
         <scene sceneID="woI-cI-ccs">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="RmV-wo-Byg" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <viewController id="GX8-tf-soB" customClass="TableViewController" customModule="WaFI" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Idl-0R-K3e">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="90" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="brS-wy-MIH">
-                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" showsReorderControl="YES" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" shouldIndentWhileEditing="NO" reuseIdentifier="theCell" rowHeight="90" id="LYM-gZ-R0l" customClass="EventTableViewCell" customModule="WaFI">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="90"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="LYM-gZ-R0l" id="N5x-Vo-9el">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="89.5"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ooQ-TF-kdE">
-                                                    <rect key="frame" x="0.0" y="-1" width="90" height="90"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ulv-dq-pY3">
-                                                    <rect key="frame" x="98" y="11" width="195" height="21"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7tU-Nh-dle">
-                                                    <rect key="frame" x="98" y="40" width="195" height="39"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                            </subviews>
-                                        </tableViewCellContentView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="vHe-Lv-Xfa">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <subviews>
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="90" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="brS-wy-MIH">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <prototypes>
+                                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" showsReorderControl="YES" hidesAccessoryWhenEditing="NO" indentationWidth="0.0" shouldIndentWhileEditing="NO" reuseIdentifier="theCell" rowHeight="90" id="LYM-gZ-R0l" customClass="EventTableViewCell" customModule="WaFI">
+                                                <rect key="frame" x="0.0" y="28" width="375" height="90"/>
+                                                <autoresizingMask key="autoresizingMask"/>
+                                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="LYM-gZ-R0l" id="N5x-Vo-9el">
+                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="89.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <subviews>
+                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ooQ-TF-kdE">
+                                                            <rect key="frame" x="0.0" y="-1" width="90" height="90"/>
+                                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                        </imageView>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ulv-dq-pY3">
+                                                            <rect key="frame" x="98" y="11" width="262" height="21"/>
+                                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7tU-Nh-dle">
+                                                            <rect key="frame" x="98" y="40" width="262" height="39"/>
+                                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                </tableViewCellContentView>
+                                                <connections>
+                                                    <outlet property="eventDetail" destination="7tU-Nh-dle" id="AaV-Zl-rjX"/>
+                                                    <outlet property="eventImage" destination="ooQ-TF-kdE" id="0QB-if-Ehj"/>
+                                                    <outlet property="eventName" destination="ulv-dq-pY3" id="10D-Za-Nzg"/>
+                                                    <segue destination="BYZ-38-t0r" kind="show" identifier="showEvent" id="d6o-99-s8B"/>
+                                                </connections>
+                                            </tableViewCell>
+                                        </prototypes>
                                         <connections>
-                                            <outlet property="eventDetail" destination="7tU-Nh-dle" id="AaV-Zl-rjX"/>
-                                            <outlet property="eventImage" destination="ooQ-TF-kdE" id="0QB-if-Ehj"/>
-                                            <outlet property="eventName" destination="ulv-dq-pY3" id="10D-Za-Nzg"/>
-                                            <segue destination="BYZ-38-t0r" kind="show" identifier="showEvent" id="d6o-99-s8B"/>
+                                            <outlet property="dataSource" destination="GX8-tf-soB" id="Qs8-Tc-QYa"/>
+                                            <outlet property="delegate" destination="GX8-tf-soB" id="lw0-Xf-OFg"/>
                                         </connections>
-                                    </tableViewCell>
-                                </prototypes>
-                                <connections>
-                                    <outlet property="dataSource" destination="GX8-tf-soB" id="Qs8-Tc-QYa"/>
-                                    <outlet property="delegate" destination="GX8-tf-soB" id="lw0-Xf-OFg"/>
-                                </connections>
-                            </tableView>
+                                    </tableView>
+                                    <tabBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TRX-eD-mDF">
+                                        <rect key="frame" x="0.0" y="618" width="375" height="49"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <items>
+                                            <tabBarItem title="Settings" id="u13-nA-6Kr"/>
+                                            <tabBarItem title="Events" id="GVY-cb-Jhr"/>
+                                        </items>
+                                    </tabBar>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="TRX-eD-mDF" secondAttribute="bottom" id="gBV-jM-0ol"/>
+                                </constraints>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="vHe-Lv-Xfa" firstAttribute="top" secondItem="Idl-0R-K3e" secondAttribute="top" id="1x2-a3-knA"/>
+                            <constraint firstItem="mG8-Ug-8KG" firstAttribute="bottom" secondItem="vHe-Lv-Xfa" secondAttribute="bottom" id="8LM-pl-mrC"/>
+                            <constraint firstItem="mG8-Ug-8KG" firstAttribute="bottom" secondItem="vHe-Lv-Xfa" secondAttribute="bottom" id="HeY-kp-0Mu"/>
+                            <constraint firstItem="vHe-Lv-Xfa" firstAttribute="trailing" secondItem="mG8-Ug-8KG" secondAttribute="trailing" id="Oc5-fK-OGZ"/>
+                            <constraint firstItem="vHe-Lv-Xfa" firstAttribute="leading" secondItem="mG8-Ug-8KG" secondAttribute="leading" id="uqn-tS-Bod"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="mG8-Ug-8KG"/>
                     </view>
                     <navigationItem key="navigationItem" title="Your Events" id="mtY-B5-TwI">
@@ -558,6 +579,7 @@
                         <outlet property="tableView" destination="brS-wy-MIH" id="5TJ-Yn-pe0"/>
                     </connections>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="RmV-wo-Byg" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1296.8" y="62.518740629685162"/>
         </scene>
@@ -602,8 +624,8 @@
         <image name="defaultPhoto" width="320" height="320"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="idZ-At-6aW"/>
-        <segue reference="iZb-VW-L6s"/>
+        <segue reference="j6Z-Zx-0eI"/>
+        <segue reference="9ah-8O-ggV"/>
         <segue reference="wZK-rH-Qvf"/>
         <segue reference="d6o-99-s8B"/>
     </inferredMetricsTieBreakers>
