--- a/WaFI/Base.lproj/Main.storyboard
+++ b/WaFI/Base.lproj/Main.storyboard
@@ -515,15 +515,23 @@
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7tU-Nh-dle">
-                                                            <rect key="frame" x="98" y="40" width="262" height="39"/>
+                                                            <rect key="frame" x="98" y="40" width="123" height="39"/>
                                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MCI-xf-4T9">
+                                                            <rect key="frame" x="229" y="40" width="131" height="39"/>
+                                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                            <color key="textColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
                                                     </subviews>
                                                 </tableViewCellContentView>
                                                 <connections>
+                                                    <outlet property="countdownLabel" destination="MCI-xf-4T9" id="j9n-2k-VRS"/>
                                                     <outlet property="eventDetail" destination="7tU-Nh-dle" id="AaV-Zl-rjX"/>
                                                     <outlet property="eventImage" destination="ooQ-TF-kdE" id="0QB-if-Ehj"/>
                                                     <outlet property="eventName" destination="ulv-dq-pY3" id="10D-Za-Nzg"/>
@@ -625,8 +633,8 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="j6Z-Zx-0eI"/>
-        <segue reference="9ah-8O-ggV"/>
-        <segue reference="wZK-rH-Qvf"/>
+        <segue reference="iZb-VW-L6s"/>
+        <segue reference="o7L-cV-7lc"/>
         <segue reference="d6o-99-s8B"/>
     </inferredMetricsTieBreakers>
 </document>
