--- a/WaFI/Base.lproj/Main.storyboard
+++ b/WaFI/Base.lproj/Main.storyboard
@@ -493,7 +493,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <subviews>
                                     <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="90" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="brS-wy-MIH">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="639"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <prototypes>
                                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" showsReorderControl="YES" hidesAccessoryWhenEditing="NO" indentationWidth="0.0" shouldIndentWhileEditing="NO" reuseIdentifier="theCell" rowHeight="90" id="LYM-gZ-R0l" customClass="EventTableViewCell" customModule="WaFI">
@@ -544,18 +544,28 @@
                                             <outlet property="delegate" destination="GX8-tf-soB" id="lw0-Xf-OFg"/>
                                         </connections>
                                     </tableView>
-                                    <tabBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TRX-eD-mDF">
-                                        <rect key="frame" x="0.0" y="618" width="375" height="49"/>
-                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bT8-ah-XFl">
+                                        <rect key="frame" x="0.0" y="639" width="375" height="28"/>
                                         <items>
-                                            <tabBarItem title="Settings" id="u13-nA-6Kr"/>
-                                            <tabBarItem title="Events" id="GVY-cb-Jhr"/>
+                                            <barButtonItem title="Sort by Date" id="efc-1t-25H">
+                                                <inset key="largeContentSizeImageInsets" minX="0.0" minY="10" maxX="0.0" maxY="0.0"/>
+                                                <connections>
+                                                    <action selector="sortByDate:" destination="GX8-tf-soB" id="FTl-5l-g4K"/>
+                                                </connections>
+                                            </barButtonItem>
+                                            <barButtonItem title="Sort by Name" id="yXu-kx-J59">
+                                                <connections>
+                                                    <action selector="sortByName:" destination="GX8-tf-soB" id="o0G-kA-CZW"/>
+                                                </connections>
+                                            </barButtonItem>
+                                            <barButtonItem title="Reverse Order" id="BN8-3S-doE">
+                                                <connections>
+                                                    <action selector="reverseEvents:" destination="GX8-tf-soB" id="kfW-ge-S6o"/>
+                                                </connections>
+                                            </barButtonItem>
                                         </items>
-                                    </tabBar>
+                                    </toolbar>
                                 </subviews>
-                                <constraints>
-                                    <constraint firstAttribute="bottom" secondItem="TRX-eD-mDF" secondAttribute="bottom" id="gBV-jM-0ol"/>
-                                </constraints>
                             </stackView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
